[project]
name = "avo_xtb"
version = "0.10.0"
description = "A convenient interface to xtb (and CREST) in Avogadro 2"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["easyxtb"]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "ruff>=0.7.2",
]

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py310"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64", "osx-64", "win-64"]

[tool.pixi.dependencies]
xtb = "*"

# CREST is available from conda-forge for these but not win-64
[tool.pixi.target.linux-64.dependencies]
crest = ">=3.0.0,<4"

[tool.pixi.target.osx-64.dependencies]
crest = ">=3.0.0,<4"

[tool.pixi.target.osx-arm64.dependencies]
crest = ">3.0.0,<4"
